<resources>
    <string name="app_name">DoubleTapCourse</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="mouth">Mouth</string>
    <string name="priority">Priority</string>
    <string name="count">Count</string>
    <string name="interval">Interval</string>
    <string name="habit_times">%1$s in %2$s</string>
    <string name="may_do_more">Можно выполнить еще %1$s раз</string>
    <string name="have_do_more">Нужно выполнить еще %1$s раз</string>

    <string name="habits">Habits</string>


    <string-array name="priority_array">
        <item>@string/high</item>
        <item>@string/low</item>
    </string-array>

    <string-array name="intervals_array">
        <item>@string/day</item>
        <item>@string/week</item>
        <item>@string/mouth</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">open</string>
    <string name="close_nav">close</string>
    <string name="about_app">About app</string>
    <string name="useful">Useful</string>
    <string name="unuseful">UnUseful</string>
    <string name="filter">Filter</string>
    <string name="name">Name</string>
    <string name="positive_habits">Positive Habits</string>
    <string name="done">done</string>
    <string name="stop_do">Хватит это делать</string>
    <string name="you_are_breathtaking">You are breathtaking!</string>
</resources>